Fix inconsistent list access pattern in test code
Co-authored-by: yortch <4576246+yortch@users.noreply.github.com>