@@ -162,7 +162,7 @@ public abstract class AbstractClinicServiceTests {
 	    Vet vet = EntityUtils.getById(vets, Vet.class, 3);
 	    assertThat(vet.getLastName()).isEqualTo("Douglas");
 	    assertThat(vet.getNrOfSpecialties()).isEqualTo(2);
-	    assertThat(vet.getSpecialties().getFirst().getName()).isEqualTo("dentistry");
+	    assertThat(vet.getSpecialties().get(0).getName()).isEqualTo("dentistry");
 	    assertThat(vet.getSpecialties().get(1).getName()).isEqualTo("surgery");
 	}
 
